fixed margin and container clipping

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1{
 }
 
 .home-con{
-  background-color:rgba(32, 32, 32, 0.897) ;
+  background-color:rgba(27, 27, 27, 0.897) ;
   height: 150px;
   width:250px;
   margin-right: auto;
@@ -28,6 +28,7 @@ h1{
   margin-top: 8px;
   padding: 5px;
   padding-bottom: 20px;
+margin-bottom: 10px;
 }
 
 .home-con-ul{
@@ -54,15 +55,13 @@ h1{
 
 
 .sidebar-panel{
-  background-color:rgba(32, 32, 32, 0.897) ;
-  width:250px;
-  grid-row:2/3;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 2px;
+  background-color:rgba(27, 27, 27, 0.897) ;
+  grid-row:2;
+  margin-left: 5px;
+  margin-bottom: 10px;
+  margin-right: 5px;
   padding: 5px;
   border-radius: 10px;
-  height: 71.8vh; /* Take up full viewport height */
 
 }
 
@@ -96,15 +95,14 @@ h2,p{
   font-weight: 700;
 }
 article{
-  background-color:rgba(32, 32, 32, 0.897) ;
+  background-color:rgba(27, 27, 27, 0.897) ;
   grid-row:1/3;
   margin-top: 8px;
   margin-left: 3px;
   margin-right: 5px;
-  margin-bottom: 2px;
+  margin-bottom: 10px;
   border-radius: 10px;
   overflow:scroll;
-  height: 97vh; /* Take up full viewport height */
 
 }
 
@@ -120,7 +118,7 @@ article{
 
 .sticky{
   display:flex;
-  background-color:rgb(32, 32, 32) ;
+  background-color:rgba(27, 27, 27, 0.897) ;
   width: 100%;
   height: 60px;
   position:fixed;
@@ -213,7 +211,6 @@ article{
 .end-box{
   width: 100%;
   height: 260px;
-  background-color: red;
   margin-top:90px;
   margin-bottom:40px;
 }
@@ -222,4 +219,25 @@ article{
   width: 100%;
   height: 140px;
   background-color: purple;
+}
+
+.end-ul-box{
+  display: flex;
+}
+
+.end-ul-box>ul{
+  list-style: none;
+  font-family: sans-serif;
+  margin-right: 70px;
+}
+.end-ul-box>ul>li{
+  margin-bottom: 8px;
+  color: rgb(175, 175, 175);
+}
+
+h3{
+  color: white;
+  font-size: 16px;
+
+
 }
